--- a/projeto-site/package.json
+++ b/projeto-site/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.2",
     "prop-types": "^15.8.1",
